...
            "state" : "translated",
            "value" : "Save failed"
          }
        }
      }
    },
    "关闭" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
...
            "state" : "translated",
            "value" : "You can only message friends"
          }
        }
      }
    },
    "同意" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accept"
          }
...
            "state" : "translated",
            "value" : "OK"
          }
        }
      }
    },
    "好友申请" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Friend Requests"
          }
...
            "state" : "translated",
            "value" : "Message Sound"
          }
        }
      }
    },
    "添加" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add"
          }
...
            "state" : "translated",
            "value" : "Chats"
          }
        }
      }
    },
    "联系人" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Contacts"
          }
...
